# src-disaster-awareness

./: .gitignore  AGENTS.md  DATA-ENGINEERING.md  Dockerfile  GLOSSARY.md  README.md  SIGNATURE_DESIGN_SUMMARY.md  SMELL_AUDIT.md  STORAGE-REFACTOR-SUMMARY.md  TODO.md  alembic.ini  app.js  config.toml  contract.md  coverage.json  index.html  main.py  process_incidents.py  pyproject.toml  run_who_pipeline.py  styles.css  testing_philosophy.md
.flowr/flows/: architecture-flow.yaml  delivery-flow.yaml  development-flow.yaml  discovery-flow.yaml  planning-flow.yaml  spec-validation-flow.yaml  tdd-cycle-flow.yaml
.github/ISSUE_TEMPLATE/: config.yml  monitoring_request.yml  news_submission.yml
.github/workflows/: deploy-dashboard.yml  disaster-monitoring.yml  generate-logs.yml  ingest-submissions.yml  ingest.yml  opencode-tests.yml  process-monitoring.yml  publish.yml  search-news.yml  tests.yml
.opencode/agents/: agent-architect.md  architect.md  dashboard-manager.md  data-engineer.md  developer.md  disaster-incident-reporter.md  incident-summarizer.md  media-incident-reporter.md  overseer.md  repo-manager.md  requirements-gatherer.md  researcher.md  storage-manager.md
alembic/: env.py  script.py.mako
alembic/versions/: 20260629_ec2f0a478cfa_baseline.py  20260630_bdc77a90477b_drop_dead_columns.py  20260630_c1a2b3d4e5f6_pandemic_potential.py  20260702_a1b2c3d4e5f7_ul_column_renames.py
dashboard/: app.js  index.html  pyproject.toml  styles.css
dashboard/data/: 2025-01-16.json  2025-01-17.json  2025-01-18.json  2025-01-19.json  2025-01-20.json  2025-01-21.json  2025-01-22.json  2025-01-23.json  2025-01-24.json  2025-01-25.json  2025-01-26.json  2025-01-27.json  2025-01-28.json  2025-01-29.json  2025-01-30.json  2025-08-06.json  2025-08-07.json  2025-08-08.json  2025-08-09.json  2025-08-10.json  2025-08-11.json  2025-08-12.json  2025-08-13.json  2025-08-14.json  2025-08-15.json  2025-08-16.json  2025-08-17.json  2025-08-18.json  2025-08-19.json  2025-08-20.json  2025-08-21.json  2025-08-22.json  2025-08-23.json  2025-08-24.json  2025-10-03.json  2025-10-04.json  2025-10-05.json  2025-10-06.json  2025-10-07.json  2025-10-08.json  (+143 more)
dashboard/data/agg/: 30.json  365.json  7.json  90.json  index.json
dashboard/reports/2025/01/: 20250121.md  20250123.md  20250124.md
dashboard/reports/2025/08/: 20250806.md  20250808.md  20250810.md  20250812.md  20250823.md
dashboard/reports/2025/10/: 20251005.md  20251007.md  20251009.md  20251014.md  20251018.md  20251024.md
dashboard/reports/2025/11/: 20251106.md  20251108.md  20251109.md  20251119.md
dashboard/reports/2026/02/: 20260212.md  20260219.md
dashboard/reports/2026/03/: 20260328.md
dashboard/reports/2026/04/: 20260402.md  20260407.md  20260408.md  20260415.md  20260416.md
dashboard/reports/2026/05/: 20260510.md  20260517.md  20260518.md
dashboard/reports/2026/06/: 20260618.md  20260619.md
dashboard/reports/2026/07/: 20260701.md  20260704.md  20260705.md  20260708.md
dashboard/scripts/: convert_data.py
dashboard/src/: __init__.py  __main__.py  server.py
dashboard/static/: app.js  index.html  styles.css
dashboard/static/data/: disease-incidents.json  incidents.json
dashboard/tests/: conftest.py  test_dashboard.py  test_dashboard_new.py
data/: 2025-01-16.json  2025-01-17.json  2025-01-18.json  2025-01-19.json  2025-01-20.json  2025-01-21.json  2025-01-22.json  2025-01-23.json  2025-01-24.json  2025-01-25.json  2025-01-26.json  2025-01-27.json  2025-01-28.json  2025-01-29.json  2025-01-30.json  2025-02-06.json  2025-02-07.json  2025-02-08.json  2025-02-09.json  2025-02-10.json  2025-02-11.json  2025-02-12.json  2025-02-13.json  2025-08-06.json  2025-08-07.json  2025-08-08.json  2025-08-09.json  2025-08-10.json  2025-08-11.json  2025-08-12.json  2025-08-13.json  2025-08-14.json  2025-08-15.json  2025-08-16.json  2025-08-17.json  2025-08-18.json  2025-08-19.json  2025-08-20.json  2025-08-21.json  2025-08-22.json  (+166 more)
data/agg/: 1.json  3.json  30.json  365.json  7.json  90.json  index.json
disaster_monitor/: __main__.py  cli.py
disaster_report/: _countries.py  _country_names.pyi  _regions.py  _regions.pyi  _search_keys.py  _search_keys.pyi  _title_format.py  _title_format.pyi  cli.py  cli.pyi  config.py  config.pyi  fetchers.py  fetchers.pyi  models.py  models.pyi  pipeline.py  pipeline.pyi
disaster_report/ai/: base.py  base.pyi  openrouter.py  openrouter.pyi
disaster_report/reporting/: markdown.py  markdown.pyi  report.py  report.pyi
disaster_report/sources/: ddg_news.py  ddg_news.pyi  ercc.py  ercc.pyi  errors.py  gdacs.py  gdacs.pyi  who.py  (+3 more)
disaster_surveillance_reporter/: __init__.py  cli.py  types.py
docs/: README.md  SYSTEM-COMPLETE.md  analysis.md  architecture-summary.md  content_similarity_matcher_requirements.md  glossary.md  state.md
fixtures/: FIXTURE_REPORT.md
incidents/: README.md
migrations/: env.py
reports/: 2025-01-16.md  2025-01-18.md  2025-01-19.md  2025-01-20.md  2025-01-22.md  2025-01-25.md  2025-01-26.md  2025-01-28.md  2025-01-29.md  2025-01-30.md  2025-08-07.md  2025-08-09.md  2025-08-11.md  2025-08-13.md  2025-08-14.md  2025-08-15.md  2025-08-16.md  2025-08-17.md  2025-08-18.md  2025-08-19.md  2025-08-20.md  2025-08-21.md  2025-08-22.md  2025-08-24.md  2025-10-04.md  2025-10-06.md  2025-10-08.md  2025-10-10.md  2025-10-11.md  2025-10-12.md  2025-10-13.md  2025-10-15.md  2025-10-17.md  2025-10-19.md  2025-10-20.md  2025-10-21.md  2025-10-26.md  2025-10-27.md  2025-11-05.md  2025-11-07.md  (+65 more)
scripts/: PROTOTYPE_RESULTS.md  backfill_canonical_names.py  backfill_gdacs_places.py  backfill_missing_news.py  backfill_news_titles.py  backfill_search_keys.py  backfill_weekly_logs.py  enrich_active_news.py  extended_monitoring.py  fix_news_dates.py  generate_dashboard_data.py  ingest_submissions.py  merge_duplicate_incidents.py  migrate_v4_to_tree.py  new_incident.py  process_monitoring_requests.py  publish_dashboard_data.py  report.py  show_tables.py  strip_docstrings.py  validate-storage-system.py  validate_pipeline.py
tests/: conftest.py  disaster_surveillance_reporter_test.py
(+964 files in other folders)
