[project]
name = "disaster-surveillance-reporter"
version = "0.1.0"
description = "This project digest incident updates from around the world and store the summary"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "eol", email = "nullhack@users.noreply.github.com" }
]
dependencies = [
    "httpx>=0.28",
    "dspy",
    "ddgs>=9.14.2",
    "structlog",
    "pycountry",
]

[project.urls]
Repository = "https://github.com/nullhack/disaster-surveillance-reporter"

[tool.setuptools.packages.find]
include = ["disaster_surveillance_reporter*"]

[tool.ruff.lint]
ignore = []
select = [
  "A",
  "ANN",
  "ASYNC",
  "B",
  "C4",
  "D",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FURB",
  "G",
  "I",
  "ICN",
  "LOG",
  "N",
  "PT",
  "PTH",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TD",
  "W",
]
preview = true
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "D205", "D212", "D415"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--maxfail=10 --color=yes --tb=short -q"
testpaths = ["tests"]
python_files = ["*_test.py"]
python_functions = ["test_*"]

[tool.taskipy.tasks]
test = "pytest"
test-fast = "pytest -q"

[dependency-groups]
dev = [
    "agents-smith>=1.0.0",
    "flowr>=1.0.0",
    "pytest-beehave>=0.2.0",
]
