[project]
name = "src-disaster-report-v3"
version = "0.1.0"
description = "Disaster surveillance report pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "ddgs>=9.14",
    "click>=8.1",
    "country-converter>=1.2",
    "pycountry>=26.2.16",
    "alembic>=1.18.5",
    "dspy>=3.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "eralchemy>=1.7.0",
    "pygraphviz>=2.0",
    "pytest>=8",
    "vcrpy>=8.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/disaster_report"]

[tool.pytest.ini_options]
testpaths = ["tests"]
