[project]
name = "dashboard"
version = "0.1.0"
description = "Disaster Awareness Dashboard - Visualize incident and disease data"
authors = [
    { name = "nullhack", email = "nullhack@noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.41.0",
]

[project.scripts]
dashboard = "src.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "ui: UI tests with Playwright",
    "e2e: End-to-end tests",
    "dashboard: Dashboard-specific tests",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.playwright]
type = "python"
pytest_timeout = 60000
